<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.wiflish.luban</groupId>
        <artifactId>luban-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../luban-parent</relativePath>
    </parent>

    <artifactId>luban-initializr</artifactId>
    <packaging>pom</packaging>
    <name>${project.artifactId}</name>

    <properties>
        <revision>1.0.0-SNAPSHOT</revision>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>
        <spring.initializr.version>0.20.0</spring.initializr.version>
        <spring.boot.version>3.1.2</spring.boot.version>
    </properties>

    <modules>
        <module>luban-initializr-generator</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.spring.initializr</groupId>
                <artifactId>initializr-bom</artifactId>
                <version>${spring.initializr.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.spring.initializr</groupId>
                <artifactId>initializr-generator</artifactId>
                <version>${spring.initializr.version}</version>
            </dependency>
            <dependency>
                <groupId>io.spring.initializr</groupId>
                <artifactId>initializr-generator-spring</artifactId>
                <version>${spring.initializr.version}</version>
            </dependency>
            <dependency>
                <groupId>io.spring.initializr</groupId>
                <artifactId>initializr-metadata</artifactId>
                <version>${spring.initializr.version}</version>
            </dependency>
            <dependency>
                <groupId>io.spring.initializr</groupId>
                <artifactId>initializr-web</artifactId>
                <version>${spring.initializr.version}</version>
            </dependency>
            <dependency>
                <groupId>io.spring.initializr</groupId>
                <artifactId>initializr-web</artifactId>
                <version>${spring.initializr.version}</version>
                <type>test-jar</type>
            </dependency>

            <dependency>
                <groupId>javax.cache</groupId>
                <artifactId>cache-api</artifactId>
                <version>1.1.1</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.22</version>
            </dependency>
            <!--加解密工具-->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>1.72</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>5.8.4</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
